Html2PdfTest: fix to work in java 8.